<resources>
    <string name="app_name">Lesku</string>

    <!-- SPLASH SCREEN -->
    <string name="splashscreen_title">L e s K u .id</string>

    <!-- DASHBOARD -->
    <string name="dashboard_menu_today_title">Hari Ini</string>
    <string name="dashboard_menu_schedule_title">Jadwal</string>
    <string name="dashboard_menu_students_title">Siswa</string>
    <string name="dashboard_menu_profile_title">Profil</string>
    <string name="dashboard_dialog_exit_message">Kamu akan keluar?</string>
    <string name="dashboard_dialog_exit_positive">Ya</string>
    <string name="dashboard_dialog_exit_negative">Tidak</string>

    <!-- TODAY -->
    <string name="today_fragment_title">Jadwal Hari Ini</string>
    <string name="today_placeholder">Tidak ada jadwal mengajar</string>

    <!-- SCHEDULE -->
    <string name="schedule_fragment_title">Atur Jadwal</string>
    <string name="schedule_placeholder">Belum ada jadwal mengajar yang terdaftar</string>

    <!-- STUDENTS -->
    <string name="students_fragment_title">Daftar Siswa</string>
    <string name="students_placeholder">Belum ada siswa yang terdaftar</string>

    <!-- ADD STUDENT -->
    <string name="add_student_activity_title">Tambah Siswa</string>
    <string name="add_student_activity_title_update_profile">Ubah Data Siswa</string>
    <string name="add_student_activity_title_update_profile_parent">Ubah Data Orang Tua Siswa</string>

    <!-- DETAIL STUDENT -->
    <string name="add_student_recapitulation_fragment_title">Rekap Les</string>
    <string name="add_student_parent_fragment_title">Orangtua</string>
    <string name="add_student_profile_fragment_title">Data Siswa</string>

    <!-- DETAIL STUDENT PROFILE -->
    <string name="detail_student_profile_name_title">Nama Lengkap</string>
    <string name="detail_student_profile_phone_title">No Telp/HP</string>
    <string name="detail_student_profile_whatsapp_title">No Whatsapp</string>
    <string name="detail_student_profile_address_title">Alamat</string>
    <string name="detail_student_profile_school_title">Sekolah / Kampus</string>
    <string name="detail_student_profile_school_level_title">Tingkat Sekolah</string>
    <string name="detail_student_profile_grade_level_title">Kelas / Tingkat</string>
    <string name="detail_student_profile_subject_title">Mata Pelajaran / Mata Kuliah</string>
    <string name="detail_student_profile_btn_edit">Ubah Data Siswa</string>
    <string name="detail_student_profile_btn_remove">Hapus Siswa</string>
    <string name="detail_student_profile_dialog_delete_student_message">Anda yakin akan menghapus</string>
    <string name="detail_student_profile_dialog_delete_student_message_last">dari daftar siswa</string>
    <string name="detail_student_profile_dialog_delete_student_positive">Ya, Hapus</string>
    <string name="detail_student_profile_dialog_delete_student_negative">Tidak</string>

    <!-- DETAIL STUDENT PARENT -->
    <string name="detail_student_parent_name_title">Nama Lengkap</string>
    <string name="detail_student_parent_phone_title">No Telp/HP</string>
    <string name="detail_student_parent_whatsapp_title">No Whatsapp</string>
    <string name="detail_student_parent_address_title">Alamat</string>
    <string name="detail_student_parent_btn_edit">Ubah Data Orang Tua Siswa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
