<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    tools:context="id.lesku.lesku.fragment.DetailStudentProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/detailStudentProfileCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailStudentProfileTxtNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_name_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtPhoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_phone_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtWhatsappTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_whatsapp_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtWhatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_address_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSchoolTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_school_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSchoolLevelitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_school_level_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSchoolLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtGradeLevelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_grade_level_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtGradeLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSubjectTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_profile_subject_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentProfileTxtSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="14sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/detailStudentProfileBtnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:theme="@style/WhiteButton"
            android:text="@string/detail_student_profile_btn_edit"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:textColor="@color/colorTextSoftGray"/>

        <Button
            android:id="@+id/detailStudentProfileBtnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/WhiteButton"
            android:text="@string/detail_student_profile_btn_remove"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:textColor="@color/colorTextSoftGray"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
