<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    tools:context="id.lesku.lesku.fragment.DetailStudentParentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/detailStudentProfileCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailStudentParentTxtNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_parent_name_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentParentTxtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/detailStudentParentTxtPhoneTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_student_parent_phone_title"
                        android:textSize="12sp"
                        android:textColor="@color/colorTextSoftGray"
                        android:layout_toStartOf="@id/detailStudentParentBtnCall"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/detailStudentParentTxtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_below="@id/detailStudentParentTxtPhoneTitle"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toStartOf="@id/detailStudentParentBtnCall"/>

                    <ImageButton
                        android:id="@+id/detailStudentParentBtnCall"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_phone_primary"
                        tools:ignore="ContentDescription"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentParentTxtWhatsappTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_parent_whatsapp_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentParentTxtWhatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLineSeparator"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/detailStudentParentTxtAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/detail_student_parent_address_title"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextSoftGray"/>

                <TextView
                    android:id="@+id/detailStudentParentTxtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="14sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/detailStudentParentBtnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:theme="@style/WhiteButton"
            android:text="@string/detail_student_parent_btn_edit"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:textColor="@color/colorTextSoftGray"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
